re-fixed buttons on iOS, adjusted size of SVG listers on ipad/mobile,

--- a/alkaline/style.css
+++ b/alkaline/style.css
@@ -86,6 +86,7 @@ body {
           flex: 0 0 38px;
           -webkit-appearance: none;
           color: black;
+          padding:0;
         }
       /* MODAL */
   /* The Modal (background) */
@@ -521,7 +522,7 @@ flex: 0 0 240px;
 }
 @media all and (max-width: 1200px) {
 .lister svg {
-max-width: 30vw;
+  max-width: 800px;
 }
 }
 
