--- a/composting/style.css
+++ b/composting/style.css
@@ -108,6 +108,7 @@ visibility:hidden;
       flex: 0 0 38px;
       -webkit-appearance: none;
       color: black;
+      padding:0;
     }
 
     /* END VIZ */
@@ -539,7 +540,7 @@ flex: 0 0 240px;
 }
 @media all and (max-width: 1200px) {
 .lister svg {
-max-width: 30vw;
+  max-width: 800px;
 }
 }
 
