--- a/cremation/style.css
+++ b/cremation/style.css
@@ -109,6 +109,7 @@ visibility:hidden;
       flex: 0 0 38px;
       -webkit-appearance: none;
       color: black;
+      padding:0;
     }
     /* END VIZ */
 
@@ -546,7 +547,7 @@ svg {
 }
 @media all and (max-width: 1200px) {
 .lister svg {
-max-width: 30vw;
+  max-width: 800px;
 }
 }
 
