--- a/css/about.css
+++ b/css/about.css
@@ -39,6 +39,7 @@
       flex: 0 0 38px;
       -webkit-appearance: none;
       color: black;
+      padding:0;
     }
 
     /* END VIZ */
