--- a/css/fullp.css
+++ b/css/fullp.css
@@ -79,6 +79,8 @@
     justify-content: center;
     align-items: center;
     flex: 0 0 38px;
+    -webkit-appearance: none;
+    padding:0;
   }
 
   /* END VIZ */
