--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
     flex: 0 0 38px;
     -webkit-appearance: none;
     color:black;
+    padding:0;
   }
   @media all and (max-width:800px) {
 
