--- a/home_burial/style.css
+++ b/home_burial/style.css
@@ -64,6 +64,7 @@ position:relative;
     align-items: center;
     flex: 0 0 38px;
     -webkit-appearance: none;
+    padding:0;
   }
 
     /* MODAL */
@@ -613,7 +614,7 @@ width: 100%;
    .lister svg {
 
 
-    max-width: 30vw;
+    max-width: 800px;
 /*    margin-bottom: 320px;*/
 } 
 }
